experimentData/JavaFuzzer/CFR-detailedExperimentData/errorSamples/recompilationFailures/356/log-1-356.log

Test.java:150: error: unreachable statement
            break;
            ^
Test.java:152: error: missing return statement
    }
    ^
Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors

Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.

